test/testdata/classes/inheritance/static/read_write_property_overridden_by_subclass_write_only_property_error.lox
class Superclass {
  static set property(_) {}

  static get property() {}
}

class Subclass < Superclass {
  // error: write-only properties are not allowed
  // lint error: write-only properties are not allowed
  static set property(_) {}
}

_ = Subclass;
